# cloud-ceiling

./: .gitignore  Makefile  Makefile.uvm  Pipfile  README.md  physical.pcf  print_report.py  project.yf  setupEnv.sh  timing.py  top.v
VHDL/ClockXing/: EventXing.v  EventXing.vhd  VectorXing.vhd
VHDL/Fifo/: DpParityRam.vhd  DpRam.vhd  FifoCounterHalf.vhd  RedundantFifo.vhd  SimpleFifo.vhd
Verilog/: gpmc-sync.v  gpmc_sync.v  parallel_strings.v  string_driver.v  top.v
Verilog/Testbench/: tb_top.v
docs/: notes.txt  regs.rdl
gui/: Pipfile  main.py
hdl/: cloud_ceiling_regmap_wrapper.sv  cpu_if.sv  extra_strings.v  gpmc_sync.sv  gpmc_sync.v  parallel_strings.v  pkg_cpu_if.sv  pll.v  string_driver.v  top.sv  top.v
hdl/VHDL/ClockXing/: EventXing.vhd  VectorXing.vhd
hdl/VHDL/Fifo/: DpRam.vhd  FifoCounterHalf.vhd
hdl/clk_xing/: event_xing.sv  vector_xing.sv
hdl/fifo/: dp_ram.sv  fifo_counter_half.sv  simple_fifo.sv
hdl/uvm/: pkg_dflop_test.sv  pkg_led_top_test.sv  tb_dflop.sv  tb_led_top.sv
hdl/uvm/agents/gpmc/: pkg_gpmc_agent.sv  pkg_gpmc_config.sv  pkg_gpmc_driver.sv  pkg_gpmc_monitor.sv
hdl/uvm/agents/vector/: pkg_vector_agent.sv  pkg_vector_driver.sv  pkg_vector_monitor.sv
hdl/uvm/envs/: pkg_dflop_env.sv  pkg_led_top_env.sv
hdl/uvm/interfaces/: gpmc_if.sv  vector_if.sv
hdl/uvm/scoreboards/: pkg_generic_scoreboard.sv
hdl/uvm/sequences/: pkg_cloud_ceiling_test_seq.sv  pkg_vector_item.sv  pkg_vector_seq.sv
kmod/: Makefile  README.md  led-driver.c
kmod/dts/: .gitignore  BB-BONE-eMMC1-DISABLE-01-00A0.dts  BB-HDMI-TDA998x-DISABLE-00A0.dts  BB-MCASP0-ENABLE-00A0.dts  BB-UART1-00A0.dts  BW-ICE40Cape-00A0.dts
rust/: .gitignore  Cargo.toml  setupEnv.sh
rust/.cargo/: config.toml
rust/configs/: chill.json  dither.json  image.json  image_scroll.json  notes.md  rainbow_pulse.json  static.json
rust/src/: args.rs  constants.rs  display.rs  fb.rs  led_ctrl.rs  led_lib.rs  led_msg.rs  main.rs  mod_ctrl.rs  modular.rs  modular_msg.rs  movie.rs  movie_ctrl.rs  msg.rs  render_block.rs  server.rs  thin.rs  thin_main.rs  var_types.rs
rust/src/animations/: common.rs  mod.rs  strobe.rs  waves.rs
rust/src/blocks/: color_interp.rs  dither.rs  gamma.rs  image_lookup.rs  mod.rs  scalar_add.rs  scalar_hsv2rgb.rs  scalar_macc.rs  scalar_ramp.rs  scalar_triangle.rs
rust/src/led_lib/: constants.rs  led_display.rs  mod.rs
scripts/: benchmark.py  cal.py  constants.py  debug.py  demo.py  mic_lights.py  mic_test.py  midi.py  motion.py  motion_config.py  motion_monitor.py  set_image.py  set_white.py  utils.py
scripts/animation/: default.py  drops.py  flame.py  sequence.py  solid.py  weather.py
