[package]
name = "cloud_ceiling"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Don't forget to 
# export PKG_CONFIG_SYSROOT_DIR=/home/dwagner/Documents/sysroots/beaglebone
# export PATH=$PATH:/home/dwagner/x-tools/arm-unknown-linux-gnueabihf/bin

[dependencies]
base64 = "0.21.7"
clap = { version = "4.4.18", features = ["derive"] }
fastrand = "2.0.1"
http-body-util = "0.1.0"
hyper = { version = "1.1.0", features = ["full"] }
hyper-util = { version = "0.1.2", features = ["full"] }
interpolation = "0.3.0"
json = "0.12.4"
magick_rust = "0.19.1"
memmap = "0.7.0"
nix = { version = "0.27.1", features = ["ioctl"], default-features = false }
num-traits = "0.2.17"
num_enum = "0.7.2"
rand = "0.8.5"
tokio = { version = "1.35.1", features = ["net", "sync", "libc", "rt", "rt-multi-thread"] }
