[package]
name = "cloud_ceiling"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "cloud_ceiling"
path = "src/modular.rs"

[[bin]]
name = "movie_ceiling"
path = "src/movie.rs"

# Don't forget to 
# export PKG_CONFIG_SYSROOT_DIR=/home/dwagner/Documents/sysroots/beaglebone
# export PATH=$PATH:/home/dwagner/x-tools/arm-unknown-linux-gnueabihf/bin

[dependencies]
base64 = "0.21.7"
clap = { version = "4.5.17", features = ["derive"] }
fastrand = "2.1.1"
http-body-util = "0.1.2"
hyper = { version = "1.4.1", features = ["full"] }
hyper-util = { version = "0.1.8", features = ["full"] }
interpolation = "0.3.0"
json = "0.12.4"
memmap = "0.7.0"
nix = { version = "0.27.1", features = ["ioctl"], default-features = false }
num-traits = "0.2.19"
num_enum = "0.7.3"
rand = "0.8.5"
tokio = { version = "1.40.0", features = ["net", "sync", "libc", "rt", "rt-multi-thread"] }
